complete html images lab

--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img
+    src = "https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
+    />
+    <img
+    src = "https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
+    alt = "rick roll video"
+    />
+    <img
+      src = "https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
+      alt = "rick roll video"
+      title = "Never gonna give you up"   
+      />
   </body>
 </html>
